feat(campaigns): add payout info in /campaigns/id/payout
